force-app/main/default/objects/mmu__MigrationStatus__c/mmu__MigrationStatus__c.object-meta.xml
<CustomObject>
    <label>Migrated Status</label>
    <nameField>
        <label>Migrated Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Migrated Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>