force-app/main/default/objects/mmu__MigrationStatus__c/fields/mmu__ObjectIndex__c.field-meta.xml
<CustomField>
    <fullName>mmu__ObjectIndex__c</fullName>
    <label>Object Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>