force-app/main/default/objects/mmu__MigrationStatus__c/fields/mmu__RecordCount__c.field-meta.xml
<CustomField>
    <fullName>mmu__RecordCount__c</fullName>
    <label>Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>