force-app/main/default/objects/mmu__MigrationStatus__c/fields/mmu__TotalObjects__c.field-meta.xml
<CustomField>
    <fullName>mmu__TotalObjects__c</fullName>
    <label>Total Objects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>